test/integration/httproute-listener-isolation/manifests/4-route-attaches-to-abc-foo-example-com/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-abc-foo-example-com
spec:
  parentRefs:
  - name: gateway
    sectionName: abc-foo-example-com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /abc-foo-example-com
    backendRefs:
    - name: http-echo
      port: 80
